		Students: increased length of student search field
		Students: fixed PHP error on Application Form edit process, when there are no roll groups to select
		Students: interface string fix in Roll Group Summary
		Students: improved address output in Student Transport report
		Students: fixed date filter bug in Roll Group Summary report
		Students: converted Students by Roll Group to full screen
		System Admin: added ability to custom order module categories in main menu
		System Admin: added system check page with version & extension information
		System Admin: coloured rows for inactive module in Manage Modules
		System Admin: fixed PHP notice in Manage Modules when un-installed modules present
		Timetable: more graceful fail when getting Google Calendar and refreshToken is not present
		Timetable: PHP Notice fix on heigh constant
		Timetable: fixed typo in class edit view
		Timetable: fixed bug preventing Master Timetable from showing classes with on location
		Timetable: added period times to titles in master timetable
		Timetable: fixed PHP Notice error when viewing the timetable for a Facility
		Timetable Admin: removed Left users from exception add screen
		Timetable Admin: narrowed down class participant count in Course edit view to users with status Full
		Timetable Admin: added search and filters to course enrolment and course management pages
		Timetable Admin: added bulk action to copy selected students to another class
		Timetable Admin: code clean up on bulk actions when managing course enrolment by class
		Timetable Admin: removed required field notice on location field when editing a class in a timetable
		Timetable Admin: added filter persistence on pagination in Manage Courses & Classes
		Timetable Admin: fixed colspan issue when deleting a day in Manage Timetables
		User Admin: fixed PHP Notice issue in user import
		User Admin: tweaked link to family from Manage Users to fix year group no-show issue